fidoconfig 0.91
--------------

----- cvs ci ------
Thu Oct 28 13:09:52 CEST 1999 
mtt:
* fixed some documentation problems

----- cvs ci ------
Thu Oct 28 12:27:40 CEST 1999
mtt:
- added email information to link structure (for the upcoming pkt2mail)

----- cvs ci ------
Sun Oct 24 23:25:00 CEST 1999
mtt:
* fixed coredump when -a is not followed by a number
* some changes from config to const *config

----- cvs ci ------
Sun Oct  3 22:04:23 CEST 1999
mtt:
* applied patch by Matthias Duesterhoeft for fidoInst

----- cvs ci ------
Sun Oct 24 16:58:04 NOVST 1999
max (patch from Kolya Nesterov):
- killRead & keepUnread documented and support added to tparse & dumpfcfg
- support for multiple netmail areas added
- carbonCopy, carbonMove tokens added
- carbonExtern token added
- linkedto script enchanted to use $FIDOCONFIG variable

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!

----- cvs ci ------
Tue Oct 12 19:21:43 NOVST 1999
max (patch from Kolya Nesterov & my fixes):
* fecfg2fconf: print squish and jam echoareas to fidoconfig

----- cvs ci ------
Mon Oct 11 01:14:27 NOVST 1999
max (patch from Kolya Nesterov):
- str2attr function added
- coredump in string2addr fixed
- echoareas file permissions (broken for now, will fix soon)
- new EchoArea tokens : -keepUnread, -killRead -0 (for use with golded).
- replaced parseLevel with parseNumber (allows to specify radix)

----- cvs ci ------
Fri Oct  8 16:11:26 MET DST 1999
tobi:
* added nodelist specific keywords for the new nltools project     
  fidouserlist
  nodelist
  diffupdate
  fullupdate
  defaultzone
  nodelistformat

----- cvs ci ------
Thu Sep 30 20:20:36 NOVST 1999
max:
* fixed one more bug in string2addr() // core dumps on some msg's

----- cvs ci ------
Tue Sep 28 16:42:08 NOVST 1999
max:
* fixed bug in string2addr() // core dumps on some msg's


fidoconfig 0.9
--------------