@@ -45,8 +45,8 @@ clean: commonclean
 distclean: commondistclean
 	-$(RM) libfidoconfig.so.$(VER)
 
-libfidoconfig.so.$(VER): line$(O) common$(O) fidoconfig$(O) patmat$(O) adcase$(O) dir$(O)
-	$(CC) -shared -Wl,-soname,libfidoconfig.so.$(VERH) -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) patmat$(O) adcase$(O) dir$(O) $(LOPT) 
+libfidoconfig.so.$(VER): line$(O) common$(O) fidoconfig$(O) adcase$(O) dir$(O)
+	$(CC) -shared -Wl,-soname,libfidoconfig.so.$(VERH) -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) adcase$(O) dir$(O) $(LOPT) 
 
 %.o: %.c
 	$(CC) $(COPT) $*.c
