@@ -44,8 +44,8 @@ clean: commonclean
 distclean: commondistclean
 	-$(RM) libfidoconfig.so.$(VER)
 
-libfidoconfig.so.$(VER): fidoconfig$(O) line$(O) common$(O) patmat$(O) dir$(O) adcase$(O) dump$(O)
-	$(LD) -shared -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) patmat$(O) adcase$(O) dir$(O) dump$(O) $(LOPT) $(LINKSMAPI) -lc
+libfidoconfig.so.$(VER): fidoconfig$(O) line$(O) common$(O) dir$(O) adcase$(O) dump$(O)
+	$(LD) -shared -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) adcase$(O) dir$(O) dump$(O) $(LOPT) $(LINKSMAPI) -lc
 	ln -sf libfidoconfig.so.$(VER) libfidoconfig.so
 
 %.o: %.c
