@@ -1,62 +1,37 @@
-# include Husky-Makefile-Config
-!include ..\huskymak.cfg
-
-CC = wcl386
-
-!IF $(DEBUG) == 1
-  CFLAGS = -zq -wx -bt=nt -j -l=nt -i=$(INCDIR) -d2
-!ELSE
-  CFLAGS = -zq -wx -bt=nt -j -l=nt -i=$(INCDIR)
-!ENDIF
-
-COPT = -oneatx -5
-LIB = wlib
-LIBS = $(LIBDIR)\smapiwcw.lib
-
-OBJS =  patmat.obj line.obj fidoconfig.obj fconf2msged.obj fconf2golded.obj fconf2aquaed.obj tparser.obj dir.obj common.obj fconf2squish.obj
-
-.c.obj:
-	$(CC) $(CFLAGS) $(COPT) -c $<
-	$(LIB) -b -q fidoconfig.lib -+$@
-
-all:    $(OBJS) fconf2msged.exe fconf2golded.exe fconf2aquaed.exe tparser.exe fconf2squish.exe fecfg2fconf.obj fecfg2fconf.exe
-
-tparser.exe:
-	$(CC) $(CFLAGS) $(COPT) tparser.c fidoconfig.lib $(LIBS)
-
-fconf2golded.exe:
-	$(CC) $(CFLAGS) $(COPT) fconf2golded.c fidoconfig.lib $(LIBS)
-
-fconf2msged.exe:
-	$(CC) $(CFLAGS) $(COPT) fconf2msged.c fidoconfig.lib $(LIBS)
-
-fconf2aquaed.exe:
-	$(CC) $(CFLAGS) $(COPT) fconf2aquaed.c fidoconfig.lib $(LIBS)
-
-fconf2squish.exe:
-	$(CC) $(CFLAGS) $(COPT) fconf2squish.c fidoconfig.lib $(LIBS)
-
-fecfg2fconf.obj: fecfg2fconf.c
-	$(CC) $(CFLAGS) $(COPT) fecfg2fconf.c -zp1 -5r
-
-fe2fconf.exe: fecfg2fconf.obj
-	wlink FILE fecfg2fconf.obj NAME fe2fconf.exe
-
-clean:
-        del *.obj *.bak
-
-distclean:
-	del *.exe *.lib
-
-install: fidoconfig.lib tparser.exe fconf2golded.exe fconf2msged.exe \
-  fconf2aquaed.exe fconf2squish.exe fe2fconf.exe fidoconfig.h fidoconf.pas
-	copy fidoconfig.lib $(LIBDIR)
-	copy tparser.exe $(BINDIR)
-	copy fconf2golded.exe $(BINDIR)
-	copy fconf2msged.exe $(BINDIR)
-	copy fconf2aquaed.exe $(BINDIR)
-	copy fconf2squish.exe $(BINDIR)
-	copy fe2fconf.exe $(BINDIR)
-	copy fidoconfig.h $(INCDIR)
-	copy fidoconf.pas $(INCDIR)
-
+CC = wcl386
+CFLAGS = -zq -wx -bt=nt -l=nt -i=..\smapi
+COPT = -oneatx -5
+LIB = wlib
+LIBS = ..\smapi\smapiwcw.lib
+
+OBJS =  adcase.obj line.obj fidoconfig.obj fconf2msged.obj fconf2golded.obj fconf2aquaed.obj tparser.obj dir.obj common.obj fconf2squish.obj
+
+.c.obj:
+        $(CC) $(CFLAGS) $(COPT) -c $<
+        $(LIB) -b -q fidoconfig.lib -+$@
+
+all:    $(OBJS) fconf2msged.exe fconf2golded.exe fconf2aquaed.exe tparser.exe fconf2squish.exe fecfg2fconf.obj fecfg2fconf.exe
+
+tparser.exe:
+        $(CC) $(CFLAGS) $(COPT) tparser.c fidoconfig.lib $(LIBS)
+
+fconf2golded.exe:
+        $(CC) $(CFLAGS) $(COPT) fconf2golded.c fidoconfig.lib $(LIBS)
+
+fconf2msged.exe:
+        $(CC) $(CFLAGS) $(COPT) fconf2msged.c fidoconfig.lib $(LIBS)
+
+fconf2aquaed.exe:
+        $(CC) $(CFLAGS) $(COPT) fconf2aquaed.c fidoconfig.lib $(LIBS)
+
+fconf2squish.exe:
+        $(CC) $(CFLAGS) $(COPT) fconf2squish.c fidoconfig.lib $(LIBS)
+
+fecfg2fconf.obj: fecfg2fconf.c
+	$(CC) $(CFLAGS) $(COPT) fecfg2fconf.c -zp1 -5r
+
+fe2fconf.exe: fecfg2fconf.obj
+	wlink FILE fecfg2fconf.obj NAME fe2fconf.exe
+
+clean:
+        del *.exe *.obj *.bak *.lib
