@@ -1,2 +1,0 @@
-/* released to the public domain */
-int patimat(char *raw, char *pat); /* case insensitive */
